# Anemulator2

./: .gitignore  Cargo.toml
src/: main.rs
src/gameboy/: cpu.rs  gameboy.rs  joypad.rs  mod.rs  ppu.rs  timer.rs
src/gameboy/audio/: apu.rs  mod.rs  noise_channel.rs  square_channel.rs  sweep.rs  volume_envelope.rs  wave_channel.rs
src/gameboy/cpu/: interrupt.rs  register.rs  registers.rs
src/gameboy/cpu/instructions/: Instruction.rs  add.rs  and.rs  bit.rs  compare.rs  dec.rs  decode.rs  decode_cb.rs  inc.rs  jump.rs  load.rs  misc.rs  mod.rs  or.rs  reset.rs  rlc.rs  rrc.rs  set.rs  sla.rs  sra.rs  srl.rs  sub.rs  swap.rs  xor.rs
src/gameboy/mbc/: mbc.rs  mbc0.rs  mbc1.rs  mod.rs  rom_loader.rs
src/gameboy/memory/: interrupt_registers.rs  memory.rs  mmu.rs  mod.rs  random_access_memory.rs  wram.rs
src/gameboy/ram/: memory.rs
src/gameboy/util/: bit_util.rs  color.rs  joypad_key.rs  mod.rs
