[package]
name = "anemulator2"
version = "0.1.0"
edition = "2021"
authors = ["Matthias Finke <webmaster@pottgames.de>"]

[dependencies]
pixels = "0.10.0"
sdl2 = { version = "0.35.2", features = ["bundled", "raw-window-handle", "static-link"] }

[profile.release]
lto = true
incremental = true
codegen-units = 16
